Pass min max instead of values

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,8 @@
     <script>
       RangeFilter.init({
         inputId: '#range-filter',
-        values: {min: 0, max: 100},
+        min: 0,
+        max: 100,
         step: 10,
         set: [0, 0],
         onChange: function (vals) {
