Adjust styles make sure it fit with the parrent box

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Range filter</title>
+    <style>
+      .container {
+        max-width: 400px; 
+        margin: auto; 
+        border: solid 1px #ccc;
+      }
+    </style>
   </head>
   <body>
     <h2 style="text-align: center;">Welcome to Range filter Test Page</h2>
-    <div style="max-width: 400px; margin: auto;">
+    <div class="container">
       <input type="text" id="range-filter" />
       <input type="text" id="range-filter-2" />
     </div>
