emit string instead object

--- a/src/index.html
+++ b/src/index.html
@@ -40,9 +40,10 @@
           onChange: function (rangeValue) { 
               var fromEL = document.getElementById(dataModel.filterId + '_from');
               var toEL = document.getElementById(dataModel.filterId + '_to');
-              if(fromEL && fromEL) {
-                  fromEL.value = rangeValue.start;
-                  toEL.value = rangeValue.end;
+              var values = rangeValue.split(',');
+              if(toEL && fromEL) {
+                  fromEL.value = values[0];
+                  toEL.value = values[1];
               }
           }
         })
