Revert "emit string instead object"
This reverts commit f8800e92a7a4d05947b43f9adf42feb8b6376fb1.

--- a/src/index.html
+++ b/src/index.html
@@ -40,10 +40,9 @@
           onChange: function (rangeValue) { 
               var fromEL = document.getElementById(dataModel.filterId + '_from');
               var toEL = document.getElementById(dataModel.filterId + '_to');
-              var values = rangeValue.split(',');
-              if(toEL && fromEL) {
-                  fromEL.value = values[0];
-                  toEL.value = values[1];
+              if(fromEL && fromEL) {
+                  fromEL.value = rangeValue.start;
+                  toEL.value = rangeValue.end;
               }
           }
         })
